# tetris-pygame

./: README.md  pyproject.toml
tetris/: assets.py  constants.py  main.py
