[tool.poetry]
name = "tetris"
version = "0.1.0"
description = ""
authors = ["codi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.0"
numpy = "^1.25.1"
black = "^23.7.0"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
